changes trainer-data to trainers
