# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use("/", require("./swagger"));
 router.use("/poke-data", require("./poke-data"));
-router.use("/trainer-data", require("./trainer-data"));
+router.use("/trainers", require("./trainers"));
 
 module.exports = router;
